Add support for activities with non-default DataStateMergers